# web-naproche

./: .gitignore  LICENSE  default.nix  readme.md
frontend/: frontend.cabal
frontend/src/: InBrowser.hs  Main.hs
