name:                frontend
version:             0.1.0.0
-- synopsis:
-- description:
author:              Anton Felix Lorenzen
maintainer:          anfelor@posteo.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable frontend
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -O2
  default-language:    Haskell2010
  default-extensions:
    DeriveFunctor
    GeneralizedNewtypeDeriving
  build-depends: base >= 4.12 && < 4.13
               , Naproche-SAD
               , containers
               , bytestring
               , mtl
               , text
               , binary
               , time
               , filepath
               , jsaddle
               , ghcjs-base >= 0.2.0.0 && < 0.2.0.4
               , aeson
